tests/files/lexer_tests/should_fail/025.cmdr
// Illegal character in string (ascii 25)
var = ''